--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.0.0",
+    "bootstrap": "^5.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "systemjs": "^6.13.0",
