--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.1.2",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.1.2",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.0.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0-alpha1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "systemjs": "^6.13.0",
